# moles-api-client

./: .gitignore  README.md  error.html  notebook.ipynb  schema.yml  uuids.txt
moles-api-v-3-client/: README.md  pyproject.toml
moles-api-v-3-client/moles_api_v_3_client/: __init__.py
moles-api-v-3-client/moles_api_v_3_client/api/acquisitions/: acquisitions_create.py  (+5 more)
moles-api-v-3-client/moles_api_v_3_client/models/: __init__.py  access_category_enum.py  constraints_list_access_category.py  constraints_read.py  constraints_write.py  curation_category_enum.py  discovery_service_id_read.py  discovery_service_id_write.py  discovery_service_id_write_request.py  dq_conformance_result_read.py  dq_conformance_result_write.py  dq_conformance_result_write_request.py  drs_dataset_read.py  drs_dataset_write.py  drs_dataset_write_request.py  function_enum.py  geographic_bounding_box_read.py  geographic_bounding_box_write.py  geographic_bounding_box_write_request.py  identifier_read.py  identifier_type_enum.py  identifier_write.py  identifier_write_request.py  identifiers_list_identifier_type.py  image_details_read.py  image_details_write.py  image_details_write_request.py  input_output_description_read.py  input_output_description_write.py  input_output_description_write_request.py  inspire_theme_read.py  inspire_theme_write.py  inspire_theme_write_request.py  instrument_platform_pair_read.py  instrument_platform_pair_write.py  instrument_platform_pair_write_request.py  instrument_read.py  instrument_type_enum.py  instrument_write.py  instrument_write_request.py  (+229 more)
(+212 files in other folders)
